--- a/templates/Login.html
+++ b/templates/Login.html
@@ -11,7 +11,7 @@
          color: rgb(255, 255, 255);
          font-family: Georgia, 'Times New Roman', Times, serif;
          text-align: center;
-         margin-bottom: 13%;
+         margin-bottom: 3%;
          font-size: 45px;
      }
 
@@ -36,12 +36,19 @@
         margin-top: 10%;
      }
 
+     h5{
+       color: white;
+       text-align: right;
+       margin-right: 2%;
+     }
+
 
     </style>
 </head>
 <body>
     <div class="box">
 <h1> Login </h1>
+        <hr>
 <form class="form-horizontal" action="">
     <div class="form-group">
       <label class="control-label col-sm-3" for="email">Email:</label>
@@ -61,6 +68,7 @@
       </div>
     </div>
   </form>
-</span>
+       <a href="/register"><h5>not a user</h5></a>
+</div>
 </body>
 </html>
