--- a/templates/Register.html
+++ b/templates/Register.html
@@ -2,37 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>Register</title>
+
+    <style>
+     h1{
+         color: rgb(255, 255, 255);
+         font-family: Georgia, 'Times New Roman', Times, serif;
+         text-align: center;
+         margin-bottom: 3%;
+         font-size: 45px;
+     }
+
+     body{
+         background-color: lavenderblush;
+     }
+
+     .box{
+         color: white;
+         background-color: brown;
+         margin-left: 35%;
+         margin-right: 35%;
+         margin-top: 10%;
+         padding:10px;
+         padding-top: 5%;
+         padding-bottom: 5%;
+
+     }
+
+     button{
+
+        margin-top: 10%;
+     }
+
+     h5{
+       color: white;
+       text-align: right;
+       margin-right: 2%;
+     }
+
+
+    </style>
 </head>
 <body>
-<!-- <center> -->
-    <h1>Get yourself register here</h1>
-<form>
-    <div class="container">
-        <div class="row justify-content-center"> 
+    <div class="box">
+<h1> Register </h1>
+        <hr>
+<form class="form-horizontal" action="">
 
-    <div class="input-group mb-3 col">
-        <span class="input-group-text" id="name">Name</span>
-        <input type="text" class="form-control" placeholder="Name" aria-label="name">
-      </div>
-      
-      <div class="input-group mb-3 ">
-        <span class="input-group-text" id="email">Email</span>
-        <input type="email" class="form-control" placeholder="Email" aria-label="email">
-      </div>
-
-      <div class="input-group mb-3">
-        <span class="input-group-text" id="password">Password</span>
-        <input type="password" class="form-control" placeholder=Password" aria-label="password">
-      </div>
-
-      <div class="input-group mb-3">
-        <input type="submit" class="form-control">
+    <div class="form-group">
+      <label class="control-label col-sm-3" for="name">Name:</label>
+      <div class="col-sm-8">
+        <input type="text" class="form-control" id="name" placeholder="Enter name">
       </div>
     </div>
+    <div class="form-group">
+      <label class="control-label col-sm-3" for="email">Email:</label>
+      <div class="col-sm-8">
+        <input type="email" class="form-control" id="email" placeholder="Enter email">
+      </div>
     </div>
-</form>
-</center>
-
+    <div class="form-group">
+      <label class="control-label col-sm-3" for="pwd">Password:</label>
+      <div class="col-sm-8">
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+  </form>
+       <a href="/login"><h5>already a user</h5></a>
+</div>
 </body>
 </html>
