--- a/templates/Login.html
+++ b/templates/Login.html
@@ -49,17 +49,17 @@
     <div class="box">
 <h1> Login </h1>
         <hr>
-<form class="form-horizontal" action="">
+<form class="form-horizontal" method="post" action="{{ url_for('login') }}">
     <div class="form-group">
       <label class="control-label col-sm-3" for="email">Email:</label>
       <div class="col-sm-8">
-        <input type="email" class="form-control" id="email" placeholder="Enter email">
+        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-3" for="pwd">Password:</label>
       <div class="col-sm-8"> 
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+        <input type="password" class="form-control" id="pwd" name="password" placeholder="Enter password">
       </div>
     </div>
     <div class="form-group"> 
