commit 3 flask task mongodb

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 
-<h1>hi {{email}}</h1>
+<h1>hi {{user.name}}</h1>
+<h1>your mail id is : {{user.email}}</h1>
 
 </body>
 </html>
