--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% extends "base.html" %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,11 +9,26 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+{% block heada %}
+    <style>
+        .welcome{
+            margin-top: 10%;
+            margin-left: 10%;
+            color: whitesmoke;
+        }
+    </style>
+{% endblock %}
+
 </head>
 <body>
+{% block body %}
+<div class = "welcome">
 
-<h1>hi {{user.name}}</h1>
-<h1>your mail id is : {{user.email}}</h1>
+    <h1>hi {{user.name}}</h1>
+    <h1>your mail id is : {{user.email}}</h1>
 
+</div>
+{% endblock %}
 </body>
 </html>
